# raftpp

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  CMakeLists.txt  README.md  error.h  logger.h  node.h  raft.h  readindex.h  result.h  storage.h  utils.h
.github/workflows/: cmake-single-platform.yml
benchmark/: bench_quorum.cpp
confchange/: confchange.h  confchange_test.cpp
example/: example.cpp  memorystorage.h
include/raftpp/: raftpp.h
include/raftpp/detail/: confchange.h  error.h  log.h  message.h  node.h  quorum.h  raft.h  readonly.h  result.h  storage.h  utils.h
include/raftpp/detail/tracker/: inflights.h  progress.h  tracker.h
log/: log.h  log_test.cpp  unstable.h
quorum/: bench_quorum.cpp  joint.h  majority.h  quorum.h  quorum_test.cpp
raftpb/: CMakeLists.txt  raft.proto
scripts/: run-clang-tidy.py
test/: confchange_test.cpp  inflights_test.cpp  log_test.cpp  quorum_test.cpp
tracker/: inflights.h  inflights_test.cpp  progress.h  state.h  tracker.h
